# scc-cli

./: .gitignore  README.md  bumpver.toml  justfile  requirements.in  requirements.txt  setup.cfg  submit_host_cli.py
scccli/: __main__.py  __version__.py  cli.py
tests/: test_cli.py
