[metadata]
name = scc-cli
version = 0.1.0
description = SCC Command Line Interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vajda-lab/scc-cli
author = SCC
author_email = SCC@
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    click
    requests
    rich
python_requires = >=3.6.0

[options.entry_points]
console_scripts =
    scc-cli = scccli.cli:cli
    scccli = scccli.cli:cli

[bdist_wheel]
universal = True
